# otus_homework_04

./: .travis.yml  CMakeLists.txt  Doxyfile  annotated.html  classes.html  classis__tuple-members.html  classis__tuple.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespaceip.html  namespacemembers.html  namespacemembers_func.html  (+28 more)
inc/: print_ip.h
include/: print_ip.h
search/: all_0.js  all_2.js  all_3.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  search.js  variables_0.js
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_main.cpp
